<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heigh_header"
        android:layout_marginEnd="@dimen/margin"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/lblTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_2x"
        android:drawableStart="@drawable/ic_bookmark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/lblSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/lblSubtitle"
        app:layout_constraintStart_toStartOf="@+id/lblTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/btnRent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/lblTitle"
        app:layout_constraintTop_toBottomOf="@id/lblSubtitle" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/btnBuy"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toEndOf="@id/btnRent"
        app:layout_constraintTop_toBottomOf="@id/lblSubtitle" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="24dp"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="@+id/btnBuy"
        app:layout_constraintStart_toStartOf="@+id/btnRent"
        app:layout_constraintTop_toBottomOf="@+id/btnRent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnPencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_3x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_3x"
        android:src="@drawable/ic_family"
        app:layout_constraintStart_toEndOf="@id/fabtnPencil"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnTomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_3x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_3x"
        android:src="@drawable/tomato"
        app:layout_constraintStart_toEndOf="@+id/fabtnFamily"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_3x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_3x"
        android:src="@drawable/ic_similar"
        app:layout_constraintStart_toEndOf="@+id/fabtnTomatoes"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblPencil"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/lblPencil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabtnPencil" />

    <TextView
        android:id="@+id/lblFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/lblFamily"
        app:layout_constraintStart_toEndOf="@+id/lblPencil"
        app:layout_constraintTop_toBottomOf="@+id/fabtnFamily" />


    <TextView
        android:id="@+id/lblTomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/lblTomatoes"
        app:layout_constraintStart_toEndOf="@+id/lblFamily"
        app:layout_constraintTop_toBottomOf="@+id/fabtnTomatoes" />

    <TextView
        android:id="@+id/lblSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/similar"
        app:layout_constraintStart_toEndOf="@+id/lblTomatoes"
        app:layout_constraintTop_toBottomOf="@+id/fabtnSimilar" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPencil" />

    <TextView
        android:id="@+id/lblSipnosis"
        android:layout_width="344dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sipnosis"
        app:layout_constraintEnd_toEndOf="@id/divider2"
        app:layout_constraintStart_toStartOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>